edit home style and css codes services

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <main id="main">
 
-        <section id="Home" class="Active">
+        <section id="Home" class="">
 
             <span class="title">زمانی که طراحی زیبایی را به خانه شما می آورد</span>
 
@@ -212,8 +212,47 @@
 
         </section>
 
-        <section id="Services">
-            services
+        <section id="Services" class="Active">
+
+            <div class="text-par">
+
+                <span class="title">
+                    خدمات کامل طراحی
+                </span>
+
+                <p class="par">
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها
+                    و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
+                </p>
+
+            </div>
+
+            <div class="gallery">
+
+                <img src="images//Services/1.jpeg" alt="image">
+                <img src="images/Services/2.jpeg" alt="image">
+                <img src="images/Services/3.jpeg" alt="image">
+                <img src="images/Services/4.jpeg" alt="image">
+
+            </div>
+
+            <div class="text-par">
+
+                <span class="title">
+                    فرآیند طراحی
+                </span>
+
+                <p class="par">
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها
+                    و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
+                </p>
+
+            </div>
+
+            <div class="btn">
+                <a href="#"> قیمت های مارا ببینید </a>
+            </div>
+
         </section>
 
         <section id="Portfolio">
