complite code page Portfolio

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
         </section>
 
-        <section id="Services" class="Active">
+        <section id="Services">
 
             <div class="text-par">
 
@@ -255,9 +255,58 @@
 
         </section>
 
-        <section id="Portfolio">
-            Portfolio
+        <section id="Portfolio" class="Active">
+
+
+            <div class="text-par">
+
+                <span class="title">
+                    کارهای قبلی ما را مرور کنید
+                </span>
+
+                <p class="par">
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها
+                    و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
+                </p>
+
+            </div>
+
+            <span class="title">امیدواریم انگیزه بگیرید</span>
+
+            <div class="gallery">
+
+                <div class="left">
+                    <img src="images/Portfolio/left/1.jpeg" alt="image">
+                    <img src="images/Portfolio/left/2.jpeg" alt="image">
+                    <img src="images/Portfolio/left/3.jpeg" alt="image">
+                    <img src="images/Portfolio/left/4.jpeg" alt="image">
+                    <img src="images/Portfolio/left/5.jpeg" alt="image">
+                    <img src="images/Portfolio/left/6.jpeg" alt="image">
+                    <img src="images/Portfolio/left/7.jpeg" alt="image">
+                    <img src="images/Portfolio/left/8.jpeg" alt="image">
+                    <img src="images/Portfolio/left/9.jpeg" alt="image">
+                    <img src="images/Portfolio/left/10.jpeg" alt="image">
+                </div>
+
+                <div class="right">
+                    <img src="images/Portfolio/right/q1.jpeg" alt="image">
+                    <img src="images/Portfolio/right/q2.jpeg" alt="image">
+                    <img src="images/Portfolio/right/q3.jpeg" alt="image">
+                    <img src="images/Portfolio/right/q4.jpeg" alt="image">
+                    <img src="images/Portfolio/right/q5.jpeg" alt="image">
+                    <img src="images/Portfolio/right/q6.jpeg" alt="image">
+                    <img src="images/Portfolio/right/q7.jpeg" alt="image">
+                    <img src="images/Portfolio/right/q8.jpeg" alt="image">
+                    <img src="images/Portfolio/right/q9.jpeg" alt="image">
+                    <img src="images/Portfolio/right/q10.jpeg" alt="image">
+                </div>
+
+            </div>
+
+
+
         </section>
+
 
         <section id="Pricing">
             Pricing
