complit mobile pricing codes

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
         </section>
 
-        <section id="Portfolio" class="Active">
+        <section id="Portfolio">
 
 
             <div class="text-par">
@@ -307,9 +307,104 @@
 
         </section>
 
+        <section id="Pricing" class="Active">
 
-        <section id="Pricing">
-            Pricing
+
+            <div class="text-par">
+
+                <span class="title">
+                    کیفیت در قیمت گذاری ماست
+                </span>
+
+                <p class="par">
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها
+                    و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
+                </p>
+
+            </div>
+
+            <div class="gallery">
+
+                <img src="images/Pricing/1.jpeg" alt="image">
+                <img src="images/Pricing/2.jpeg" alt="image">
+                <img src="images/Pricing/3.jpeg" alt="image">
+
+
+            </div>
+
+            <div class="text-par">
+
+                <span class="title">
+                    طرح های طراحی
+                </span>
+
+                <p class="par">
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها
+                    و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
+                </p>
+
+            </div>
+
+            <div class="plan">
+
+                <span class="name-price">طرح پایه</span>
+                <span class="name-price">500$</span>
+
+                <span class="Property">لورم ایپسوم متن</span>
+                <span class="Property">لورم ایپسوم متن</span>
+                <span class="Property">لورم ایپسوم متن</span>
+                <span class="Property">لورم ایپسوم متن</span>
+                <span class="Property">لورم ایپسوم متن</span>
+                <span class="Property">لورم ایپسوم متن</span>
+
+            </div>
+
+            <div class="plan">
+
+                <span class="name-price">طرح استاندارد</span>
+                <span class="name-price">1000$</span>
+
+                <span class="Property">لورم ایپسوم متن</span>
+                <span class="Property">لورم ایپسوم متن</span>
+                <span class="Property">لورم ایپسوم متن</span>
+                <span class="Property">لورم ایپسوم متن</span>
+                <span class="Property">لورم ایپسوم متن</span>
+                <span class="Property">لورم ایپسوم متن</span>
+
+            </div>
+
+            <div class="plan">
+
+                <span class="name-price">طرح اختصاصی</span>
+                <span class="name-price">2500$</span>
+
+                <span class="Property">لورم ایپسوم متن</span>
+                <span class="Property">لورم ایپسوم متن</span>
+                <span class="Property">لورم ایپسوم متن</span>
+                <span class="Property">لورم ایپسوم متن</span>
+                <span class="Property">لورم ایپسوم متن</span>
+                <span class="Property">لورم ایپسوم متن</span>
+
+            </div>
+
+
+            <div class="text-par">
+
+                <span class="title">
+                    راه ارتباطی ما برای سوالات
+                </span>
+
+                <p class="par">
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها
+                    و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
+                </p>
+            </div>
+
+            <div class="btn">
+                <a href="#"> تماس با ما</a>
+            </div>
+
+
         </section>
 
         <section id="About-Us">
@@ -319,8 +414,6 @@
         <section id="Contact">
             Contact
         </section>
-
-
 
 
     </main>
