coplite About-us codes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 
 <head>
     <meta charset="UTF-8">
@@ -32,7 +32,10 @@
 
 </head>
 
+
 <body>
+
+
 
     <header id="header">
 
@@ -84,8 +87,10 @@
 
     </header>
 
-    <main id="main">
 
+
+    <main id="main">
+        <!--  -->
         <section id="Home" class="">
 
             <span class="title">زمانی که طراحی زیبایی را به خانه شما می آورد</span>
@@ -211,7 +216,7 @@
             </div>
 
         </section>
-
+        <!--  -->
         <section id="Services">
 
             <div class="text-par">
@@ -254,7 +259,7 @@
             </div>
 
         </section>
-
+        <!--  -->
         <section id="Portfolio">
 
 
@@ -306,8 +311,8 @@
 
 
         </section>
-
-        <section id="Pricing" class="Active">
+        <!--  -->
+        <section id="Pricing">
 
 
             <div class="text-par">
@@ -387,7 +392,6 @@
 
             </div>
 
-
             <div class="text-par">
 
                 <span class="title">
@@ -406,17 +410,121 @@
 
 
         </section>
+        <!--  -->
+        <section id="About-Us" class="Active">
 
-        <section id="About-Us">
-            About-Us
+
+            <div class="gallery">
+
+                <img src="images/About-Us/1.jpeg" alt="image">
+
+            </div>
+
+            <div class="text-par">
+
+                <span class="title">
+                    ارتباط با مدیر عامل
+                </span>
+
+                <p class="par">
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها
+                    و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
+                </p>
+
+            </div>
+
+            <div class="gallery">
+
+                <img src="images/About-Us/2.jpeg" alt="image">
+                <img src="images/About-Us/3.jpeg" alt="image">
+
+            </div>
+
+            <div class="text-par">
+
+                <span class="title">
+                    ارتباط با تیم
+                </span>
+
+                <p class="par">
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها
+                    و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
+                </p>
+
+            </div>
+
+            <article class="employee-profile">
+
+                <img src="images/About-Us/5.jpeg" alt="image">
+
+                <span class="name-price">
+                    CLAIRE MEND
+                </span>
+
+                <p class="description">
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها
+                    و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
+                    کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد کتابهای زیادی در شصت و سه درصد گذشته حال و
+                    آینده شناخت فراوان جامعه و متخصصان را می طلبد
+                </p>
+
+
+
+            </article>
+
+            <article class="employee-profile">
+
+                <img src="images/About-Us/6.jpeg" alt="image">
+
+                <span class="name-price">
+                    ANDREW BOWERS
+                </span>
+
+                <p class="description">
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها
+                    و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
+                    کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد کتابهای زیادی در شصت و سه درصد گذشته حال و
+                    آینده شناخت فراوان جامعه و متخصصان را می طلبد
+                </p>
+
+
+
+            </article>
+
+            <article class="employee-profile">
+
+                <img src="images/About-Us/4.jpeg" alt="image">
+
+
+                <span class="name-price">
+                    MANDY WOLF
+                </span>
+
+                <p class="description">
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها
+                    و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
+                    کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد کتابهای زیادی در شصت و سه درصد گذشته حال و
+                    آینده شناخت فراوان جامعه و متخصصان را می طلبد
+                </p>
+
+
+
+            </article>
+
+
+
+
+
         </section>
-
+        <!--  -->
         <section id="Contact">
             Contact
         </section>
 
 
     </main>
+
+
 
     <footer id="footer">
 
@@ -462,6 +570,8 @@
         </div>
 
     </footer>
+
+
 
     <script src="script/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/js/all.min.js"
