--- a/index.html
+++ b/index.html
@@ -90,18 +90,20 @@
 
 
     <main id="main">
+
+
         <!--  -->
-        <section id="Home" class="">
+        <section id="Home" class="Active">
 
             <span class="title">زمانی که طراحی زیبایی را به خانه شما می آورد</span>
 
             <article class="baner-main">
-                <img src="images/kam-idris-unsplash-YX452RV456SgQN7p.jpg.webp" alt="image">
+                <img src="images/Home/kam-idris-unsplash-YX452RV456SgQN7p.jpg.webp" alt="image">
             </article>
 
 
             <div class="btn">
-                <a href="#">تماس با ما</a>
+                <a href="#" data-id="#Contact" onclick="changePage(this)" class="link">تماس با ما</a>
             </div>
 
             <div class="text-par">
@@ -120,13 +122,13 @@
             </div>
 
             <div class="btn">
-                <a href="#">خدمات مارا ارزیابی کنید</a>
+                <a href="#" data-id="#Services" onclick="changePage(this)" class="link">خدمات مارا ارزیابی کنید</a>
             </div>
 
 
 
             <article class="baner">
-                <img src="images/kam-idris-unsplash-YbNGbRg3MQCZE9K9.jpeg" alt="image">
+                <img src="images/Home/kam-idris-unsplash-YbNGbRg3MQCZE9K9.jpeg" alt="image">
             </article>
 
 
@@ -146,19 +148,19 @@
             </div>
 
             <div class="btn">
-                <a href="#">نگاهی بیاندازید</a>
+                <a href="#" data-id="#Portfolio" onclick="changePage(this)" class="link">نگاهی بیاندازید</a>
             </div>
 
 
             <article class="gallery">
 
-                <img src="images/1.jpeg" alt="image">
+                <img src="images/Home/1.jpeg" alt="image">
 
-                <img src="images/2.jpeg" alt="image">
+                <img src="images/Home/2.jpeg" alt="image">
 
-                <img src="images/3.jpeg" alt="image">
+                <img src="images/Home/3.jpeg" alt="image">
 
-                <img src="images/4.webp" alt="image">
+                <img src="images/Home/4.webp" alt="image">
 
             </article>
 
@@ -174,8 +176,8 @@
                     حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان
                 </p>
 
-                <div class="btn" style="width: 20vw;">
-                    <a href="#">بیشتر بخوانید</a>
+                <div class="btn">
+                    <a href="#" data-id="#About-Us" onclick="changePage(this)" class="link">بیشتر بخوانید</a>
                 </div>
 
             </div>
@@ -255,7 +257,7 @@
             </div>
 
             <div class="btn">
-                <a href="#"> قیمت های مارا ببینید </a>
+                <a href="#" data-id="#Pricing" onclick="changePage(this)" class="link"> قیمت های مارا ببینید </a>
             </div>
 
         </section>
@@ -405,13 +407,13 @@
             </div>
 
             <div class="btn">
-                <a href="#"> تماس با ما</a>
+                <a href="#" data-id="#Contact" onclick="changePage(this)" class="link"> تماس با ما</a>
             </div>
 
 
         </section>
         <!--  -->
-        <section id="About-Us" class="Active">
+        <section id="About-Us">
 
 
             <div class="gallery">
@@ -518,7 +520,77 @@
         </section>
         <!--  -->
         <section id="Contact">
-            Contact
+
+            <div class="text-par">
+
+                <span class="title">
+                    در تماس باشید
+                </span>
+
+                <p class="par">
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها
+                    و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
+                </p>
+
+            </div>
+
+            <div class="text-box">
+
+                <span>آدرس</span>
+
+                <p>لورم ایپسوم متن ساختگی با تولید</p>
+                <p>لورم ایپسوم متن ساختگی با تولید</p>
+
+            </div>
+
+            <div class="text-box">
+
+                <span>ارتباط</span>
+
+                <p>لورم ایپسوم متن ساختگی با تولید</p>
+                <p>لورم ایپسوم متن ساختگی با تولید</p>
+
+            </div>
+
+            <div class="text-box">
+
+                <span>ساعت کاری شرکت</span>
+
+                <p>لورم ایپسوم متن ساختگی با تولید</p>
+                <p>لورم ایپسوم متن ساختگی با تولید</p>
+
+            </div>
+
+
+            <form class="contactForm">
+
+                <label>
+                    * نام
+                    <input type="text" placeholder="Type your name">
+                </label>
+
+                <label>
+                    * نام خانوادگی
+                    <input type="text" placeholder="Type your last name">
+                </label>
+
+                <label>
+                    * ایمیل
+                    <input type="text" placeholder="Type your email">
+                </label>
+
+                <label>
+                    * پیفام
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Type your message"></textarea>
+                </label>
+
+                <div class="btn">
+                    <a href="#">ارسال</a>
+                </div>
+
+            </form>
+
+
         </section>
 
 
@@ -574,6 +646,7 @@
 
 
     <script src="script/main.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/js/all.min.js"
         integrity="sha512-naukR7I+Nk6gp7p5TMA4ycgfxaZBJ7MO5iC3Fp6ySQyKFHOGfpkSZkYVWV5R7u7cfAicxanwYQ5D1e17EfJcMA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
