responsive Home page

--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@
         <!--  -->
         <section id="Home" class="Active page">
 
-            <span class="title">زمانی که طراحی زیبایی را به خانه شما می آورد</span>
+            <span class="title titleHome" style="font-weight: 300;">زمانی که طراحی زیبایی را به خانه شما می آورد</span>
 
             <article class="baner-main">
                 <img src="images/Home/kam-idris-unsplash-YX452RV456SgQN7p.jpg.webp" alt="image">
             </article>
 
 
-            <div class="btn">
+            <div class="btn btnContact">
                 <a href="#" data-id="#Contact" onclick="changePage(this)" class="link">تماس با ما</a>
             </div>
 
-            <div class="text-par">
+            <div class="text-par textDesign">
 
                 <span class="title">
-                    طراحی داخلی همان چیزی است که ما بهترین کار را انجام می دهیم
+                    بهترین طراحی داخلی را انجام می دهیم
                 </span>
 
                 <p class="par">
@@ -116,18 +116,16 @@
 
             </div>
 
-            <div class="btn">
+            <div class="btn btnServices">
                 <a href="#" data-id="#Services" onclick="changePage(this)" class="link">خدمات مارا ارزیابی کنید</a>
             </div>
-
-
 
             <article class="baner">
                 <img src="images/Home/kam-idris-unsplash-YbNGbRg3MQCZE9K9.jpeg" alt="image">
             </article>
 
 
-            <div class="text-par">
+            <div class="text-par textPortfolio">
 
                 <span class="title">
                     ... شما با الهام گرفتن شروع کنید
@@ -142,20 +140,27 @@
 
             </div>
 
-            <div class="btn">
+            <div class="btn btnPortfolio">
                 <a href="#" data-id="#Portfolio" onclick="changePage(this)" class="link">نگاهی بیاندازید</a>
             </div>
 
 
             <article class="gallery">
 
-                <img src="images/Home/1.jpeg" alt="image">
+                <figure class="image-con">
+                    <img src="images/Home/1.jpeg" alt="image">
+                </figure>
 
-                <img src="images/Home/2.jpeg" alt="image">
+                <figure class="image-double">
+                    <img src="images/Home/2.jpeg" alt="image">
 
-                <img src="images/Home/3.jpeg" alt="image">
+                    <img src="images/Home/3.jpeg" alt="image">
 
-                <img src="images/Home/4.webp" alt="image">
+                </figure>
+
+                <figure class="image-con">
+                    <img src="images/Home/4.webp" alt="image">
+                </figure>
 
             </article>
 
@@ -175,39 +180,62 @@
                     <a href="#" data-id="#About-Us" onclick="changePage(this)" class="link">بیشتر بخوانید</a>
                 </div>
 
+
+
             </div>
 
             <div class="testimonial">
 
                 <span class="title" style="display: block;">نظرات زیبا از مشتریان ما</span>
 
-                <span class="testimonial-name">لورم ایپسوم متن ساختگی با تولید</span>
 
-                <p class="testimonial-text">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از
-                    طراحان گرافیک است چاپگرها و
-                    متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
-                    کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد کتابهای زیادی در شصت و سه درصد گذشته حال و
-                    آینده</p>
+                <div class="container">
+
+                    <div>
+                        <span class="testimonial-name">لورم ایپسوم متن ساختگی با تولید</span>
+
+                        <p class="testimonial-text">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
+                            استفاده
+                            از
+                            طراحان گرافیک است چاپگرها و
+                            متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد
+                            نیاز و
+                            کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد کتابهای زیادی در شصت و سه درصد گذشته
+                            حال و
+                            آینده</p>
+                    </div>
+
+                    <div>
+                        <span class="testimonial-name">لورم ایپسوم متن ساختگی با تولید</span>
+
+                        <p class="testimonial-text">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
+                            استفاده
+                            از
+                            طراحان گرافیک است چاپگرها و
+                            متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد
+                            نیاز و
+                            کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد کتابهای زیادی در شصت و سه درصد گذشته
+                            حال و
+                            آینده</p>
+                    </div>
+
+                    <div>
+                        <span class="testimonial-name">لورم ایپسوم متن ساختگی با تولید</span>
+
+                        <p class="testimonial-text">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
+                            استفاده
+                            از
+                            طراحان گرافیک است چاپگرها و
+                            متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد
+                            نیاز و
+                            کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد کتابهای زیادی در شصت و سه درصد گذشته
+                            حال و
+                            آینده</p>
+                    </div>
+
+                </div>
 
 
-
-                <span class="testimonial-name">لورم ایپسوم متن ساختگی با تولید</span>
-
-                <p class="testimonial-text">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از
-                    طراحان گرافیک است چاپگرها و
-                    متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
-                    کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد کتابهای زیادی در شصت و سه درصد گذشته حال و
-                    آینده</p>
-
-
-
-                <span class="testimonial-name">لورم ایپسوم متن ساختگی با تولید</span>
-
-                <p class="testimonial-text">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از
-                    طراحان گرافیک است چاپگرها و
-                    متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
-                    کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد کتابهای زیادی در شصت و سه درصد گذشته حال و
-                    آینده</p>
 
 
             </div>
@@ -594,10 +622,8 @@
 
     <footer id="footer" class="flexcolumn">
 
-
-
         <ul class="link-item">
-            <span class="Guide">ما چه کاری انجام می دهیم ؟</span>
+            <span class="Guide space">ما چه کاری انجام می دهیم ؟</span>
             <li class="link-items space">
                 <a href="#" data-id="#Services" onclick="changePage(this)" class="link">خدمات</a>
             </li>
@@ -623,10 +649,6 @@
                 <i class="fa-brands fa-twitter"></i>
             </li>
         </ul>
-
-
-
-
 
 
         <div class="container-input">
